examples/test/testpolicy10663.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10663
  namespace: namespace182
spec:
  podSelector:
    matchLabels:
      key23: value34
      key38: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value44
          key44: value26
      podSelector:
        matchLabels:
          key27: value31
          key4: value10
          key26: value47
